--- a/resources/scss/ceres/widgets/Header/_navigation-widget.scss
+++ b/resources/scss/ceres/widgets/Header/_navigation-widget.scss
@@ -198,7 +198,7 @@ body.menu-is-visible { // stylelint-disable-line selector-no-qualifying-type
 
                     visibility: visible;
                     opacity: 1;
-                    z-index: $zindex-fixed;
+                    z-index: $zindex-9;
                 }
             }
         }
